// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modals AlertModal renders correctly 1`] = `
<div
  className="modal style"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents alert_modal_wrapper"
  >
    <div
      className="alert_modal_heading"
    >
      <svg
        aria-hidden="true"
        className="alert_modal_icon"
        fill="currentColor"
        height={undefined}
        style={undefined}
        version="1.1"
        viewBox="0 0 24 24"
        width={undefined}
        x={undefined}
        y={undefined}
      >
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          fillRule="evenodd"
        />
      </svg>
      heading
    </div>
    <div
      className="alert_modal_contents"
    >
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title={undefined}
        type="button"
      >
        a
      </button>
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title={undefined}
        type="button"
      >
        b
      </button>
    </div>
  </div>
</div>
`;

exports[`modals ContinueModal renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents alert_modal_wrapper no_alert_header"
  >
    <div
      className="alert_modal_contents"
    >
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title="Cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title="Continue"
        type="button"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`modals Modal renders correctly 1`] = `
<div
  className="modal foo"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    children
  </div>
</div>
`;

exports[`modals ModalPage renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="overlay"
    onClick={undefined}
  />
  <header
    className="title_bar title_bar"
  >
    <button
      className="button_flat inverted"
      disabled={undefined}
      onClick={[Function]}
      title="Back"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="icon"
        fill="currentColor"
        height={undefined}
        style={undefined}
        version="1.1"
        viewBox="0 0 24 24"
        width={undefined}
        x={undefined}
        y={undefined}
      >
        <path
          d="M15.429 17.019l-4.242-4.59 4.242-4.59-1.312-1.41-5.545 6 5.545 6z"
          fillRule="evenodd"
        />
      </svg>
      back
    </button>
    <div
      className="title_wrapper"
    >
      <h1
        className="title"
      >
        Title
      </h1>
      <span
        className="separator"
      >
        |
      </span>
      <h2
        className="subtitle"
      >
        Subtitle
      </h2>
    </div>
  </header>
  <div
    className="modal_page_contents"
  >
    children
  </div>
</div>
`;

exports[`modals Overlay renders correctly 1`] = `
<div
  className="overlay clickable"
  onClick={[Function]}
/>
`;

exports[`modals SpinnerModalPage renders correctly 1`] = `
<div
  className="modal"
>
  <header
    className="title_bar title_bar"
  >
    <button
      className="button_flat inverted"
      disabled={true}
      onClick={undefined}
      title="Back"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="icon"
        fill="currentColor"
        height={undefined}
        style={undefined}
        version="1.1"
        viewBox="0 0 24 24"
        width={undefined}
        x={undefined}
        y={undefined}
      >
        <path
          d="M15.429 17.019l-4.242-4.59 4.242-4.59-1.312-1.41-5.545 6 5.545 6z"
          fillRule="evenodd"
        />
      </svg>
      back
    </button>
    <div
      className="title_wrapper"
    >
      <h1
        className="title"
      >
        Title
      </h1>
      <span
        className="separator"
      >
        |
      </span>
      <h2
        className="subtitle"
      >
        Subtitle
      </h2>
    </div>
  </header>
  <div
    className="modal"
  >
    <div
      className="overlay"
      onClick={undefined}
    />
    <div
      className="spinner_modal_contents"
    >
      <svg
        aria-hidden="true"
        className="spinner_modal_icon spin"
        fill="currentColor"
        height={undefined}
        style={undefined}
        version="1.1"
        viewBox="0 0 512 512"
        width={undefined}
        x={undefined}
        y={undefined}
      >
        <path
          d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
          fillRule="evenodd"
        />
      </svg>
      <p />
    </div>
  </div>
</div>
`;
